k8/gateway-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: health-app-spring-gateway
  namespace: health-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: health-app-spring-gateway
  template:
    metadata:
      labels:
        app: health-app-spring-gateway
    spec:
      containers:
        - name: health-app-spring-gateway
          image: health-app-spring-gateway:1.0.0
          ports:
            - containerPort: 9762

---
apiVersion: v1
kind: Service
metadata:
  name: spring-gateway-service
  namespace: health-app
spec:
  type: LoadBalancer
  selector:
    app: health-app-spring-gateway
  ports:
    - protocol: TCP
      port: 9762
      targetPort: 9762
