k8/gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace: health-app
spec:
  rules:
     - host: api.cloud-gateway.com
       http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-gateway-service
                port:
                  number: 8081
